--- a/views/template/common/references.twig
+++ b/views/template/common/references.twig
@@ -37,7 +37,7 @@
 {# </div>  #}
 
 {# Modal Ref #}  
-<div class="modal fade" id="refModal" tabindex="-1" aria-labelledby="refModalLabel" aria-hidden="true">
+<div class="modal fade" id="refModal" tabindex="-1" data-bs-backdrop="static" aria-labelledby="refModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
