--- a/views/template/common/footer.twig
+++ b/views/template/common/footer.twig
@@ -1,14 +1,14 @@
 <footer class="footer d-flex d-sm-flex p-1 justify-content-between">     
     {% if logged %}               
-        <input class="text text-truncate col-6 ms-1" type="text" id="status"  disabled>               
+        <input class="text text-truncate ms-1" type="text" id="status" style="min-width:50%;" disabled>               
     {% else %}   
         <div></div>
     {% endif %}   
-    <div class="d-flex d-sm-flex justify-content-end">
-        <div class="collapse show ms-4" id="target">                           
-            <a class="text-truncate" href="https://eva.brainrs.com">EVA © 2023 Brain Retail Service LLC</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;        
+    <div class="d-flex d-sm-flex justify-content-end text-truncate" style="max-width:100%;">
+        <div class="collapse show ms-4 text-truncate" id="target">                           
+            <a href="https://eva.brainrs.com">EVA © 2023 Brain Retail Service LLC</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;        
             <a href="https://github.com/JetBrain2056">Repository GitHub</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
-            <span class="text">{{ text_version }}&nbsp;{{ Version }}_{{ lang }}</span>&nbsp;               
+            <span>{{ text_version }}&nbsp;{{ Version }}_{{ lang }}</span>&nbsp;               
         </div>    
         <button class="btn btn-primary btn-sm" type="button" style="max-height:23px;" data-bs-toggle="collapse" href="#target" aria-expanded="false" aria-controls="target">
             <i class="fa fa-angle-up"></i>
