--- a/views/index.twig
+++ b/views/index.twig
@@ -21,7 +21,7 @@
             {% if logged %}              
                 <div class="d-flex flex-row flex-grow-1">                
                     {% if mode %} {#Backend#}                                       
-                        <div class="col-2 sidebar" style="overflow-y: scroll">
+                        <div class="col-sm-2 sidebar" style="overflow-y: scroll">
                             {% include "./template/common/column_left.twig" %}
                         </div>
                         <div class="col">
