--- a/views/stylesheet/stylesheet.css
+++ b/views/stylesheet/stylesheet.css
@@ -61,7 +61,7 @@ footer {
 .form-signin .form-control:focus {
 	z-index: 2;
 }
-input:invalid {
+input:invalid, select:invalid {
 	border: 1px solid red;
 	border-radius: 8px;
 }
