--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -358,7 +358,7 @@
             <select class="form-select form-select-sm" id="input-req-type">              
               <option selected value="String">String</option>                
               <option value="Number">Number</option> 
-              <option value="Data">Date</option>   
+              <option value="Date">Date</option>   
               <option value="Boolean">Boolean</option>                                                      
               <option value="Reference">{{text_reference}}</option>              
               <option value="Document">{{text_document}}</option>                                                              
