--- a/views/template/common/references.twig
+++ b/views/template/common/references.twig
@@ -6,7 +6,7 @@
       {# <hr/> #}
       <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">
         <div class="btn-group btn-group-sm" role="group">
-          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" data-bs-toggle="modal" data-bs-target="#refModal" onclick="refModal()">
+          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="refModal()">
             <i class="fa fa-plus-square"></i>
             <span>{{ button_add }}</span>
           </button>
@@ -51,7 +51,7 @@
       </div>
       <div class="modal-footer">
         {# <button type="submit" class="btn btn-primary" onclick="refSave()"><i class="fa fa-floppy-o"></i></button> #}
-        <button type="submit" class="btn btn-primary" data-bs-dismiss="modal" onclick="refCreate()">{{ button_save }}&{{button_close}}</button>        
+        <button type="submit" class="btn btn-primary" onclick="refCreate()">{{ button_save }}&{{button_close}}</button>        
       </div>
     </div>
   </div>
