--- a/views/template/common/login.twig
+++ b/views/template/common/login.twig
@@ -21,16 +21,16 @@
             </div>
             <div class="form-group">
                 <label for="input-username">{{ entry_username }}</label>
-                <div class="input-group gap-2">
-                    <div class="input-group-text" for="input-username"><i class="fa fa-user"></i></div>                    
-                    <select type="text" name="username" value="{{ username }}" class="form-select form-control" id="input-username">
+                <div class="input-group input-group-lg gap-2">
+                    <span class="input-group-text" for="input-username"><i class="fa fa-user"></i></span>                    
+                    <select name="username" value="{{ username }}" class="form-select form-control" id="input-username">
                         <option selected>  </option>
                     </select>
                 </div>
             </div>
-            <div>
+            <div class="form-group">
                 <label for="input-password">{{ entry_password }}</label>
-                <div class="input-group  gap-2">
+                <div class="input-group input-group-lg gap-2">
                     <span class="input-group-text" id="btnGroupAddon2"><i class="fa fa-lock"></i></span>
                     <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" class="form-control" aria-describedby="btnGroupAddon2">
                 </div>
