--- a/views/template/common/header.twig
+++ b/views/template/common/header.twig
@@ -63,11 +63,11 @@
         {% else %}
         <div class="collapse navbar-collapse" id="navbarNavDropdown">                                
           <ul class="nav navbar-nav" id="eva-nav" role="tablist">             
-            <li class="nav-item" hidden>
+            {# <li class="nav-item" hidden>
               <a class="nav-link eva-link" href="#" id="ref-form" data-bs-toggle="tab" data-bs-target="#nav-ref-form"  role="tab" aria-controls="nav-ref-form" aria-selected="false" onclick="">
                 ref-form
               </a>
-            </li> 
+            </li>  #}
           </ul>   
           <ul class="nav navbar-nav align-items-center gap-2" role="tablist">  
             <li class="nav-item">
