--- a/views/template/common/references.twig
+++ b/views/template/common/references.twig
@@ -1,8 +1,13 @@
 {% block ref %}    
-{# <div class="tab-content" id="nav-tab-cont" > #}
+{# <div class="tab-content" id="nav-tab-cont" > #} 
     {# Reference #}
-    <div class="tab-pane fade" id="nav-ref-form" role="tabpanel" aria-labelledby="naf-Ref-tab">      
-      <h5 class="title" id="refFormLabel">Reference</h5>         
+    <div class="tab-pane fade" id="nav-ref-form" role="tabpanel" aria-labelledby="naf-Ref-tab">    
+      <ul class="nav nav-tabs" id="eva-nav-tabs">
+        {# <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Active</a>
+        </li> #}
+      </ul>
+      <h5 class="title" id="refFormLabel">Reference*</h5>         
       {# <hr/> #}
       <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">
         <div class="btn-group btn-group-sm" role="group">
