--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -33,7 +33,7 @@
         </div>
       </div>
     </div>           
-    <div class="eva-form"></div>      
+    <div class="eva-table"></div>      
   </div> 
   {# Users [1] #}
   <div class="tab-pane fade" id="nav-users" role="tabpanel" aria-labelledby="nav-users-tab">
@@ -66,7 +66,7 @@
         </div>
       </div>
     </div>           
-    <div class="eva-form"></div>      
+    <div class="eva-table"></div>      
   </div>    
   {# Roles [2] #}
   <div class="tab-pane fade" id="nav-roles" role="tabpanel" aria-labelledby="nav-roles-tab">
@@ -82,7 +82,7 @@
         </button>
       </div>
     </div>           
-    <div class="eva-form"></div>  
+    <div class="eva-table"></div>  
   </div>
 </div>  
 
