--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -248,12 +248,12 @@
               <label for="input-subsystem">Subsystem:</label>
               <div class="input-group input-group-sm"> 
                 <input type="text" placeholder="..." id="input-subsystem" class="form-control"/>
-                <button class="btn btn-outline-secondary" type="button" onclick="objectEditSubsystem()">...</button>
+                <button class="btn btn-outline-secondary" id="input-subsystem-btn" type="button" onclick="objectEditSubsystem()">...</button>
               </div>                  
               <label for="input-owner">Owner:</label>
               <div class="input-group input-group-sm">
-                <input type="text" placeholder="..." id="input-owner" class="form-control"/>
-                <button class="btn btn-outline-secondary" type="button" onclick="objectOwner()" disabled>...</button>
+                <input type="text" placeholder="..." id="input-owner" class="form-control" disabled/>
+                <button class="btn btn-outline-secondary" id="input-owner-btn" type="button" onclick="objectOwner()" disabled>...</button>
               </div>  
               <label for="input-module">Others:</label>
               <div class="input-group input-group-sm">
