--- a/views/template/common/references.twig
+++ b/views/template/common/references.twig
@@ -19,7 +19,7 @@
             <i class="fa fa-edit"></i>
             <span>{{ button_edit }}</span>
           </button>
-          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" >
+          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="refCopy()">
             <i class="fa fa-clone" aria-hidden="true"></i>
             <span>{{ button_copy }}</span>
           </button>
